--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -32,13 +32,16 @@ nav div{
 .propiedades {
     padding: 0px 5%;
     display:grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 45px
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+    
 }
 .propiedad{ 
     margin: auto;
     background: rgba(255, 255, 255, 0.068);
     box-shadow: 0px 0px 7px 1px rgba(255, 255, 255, 0.39);
+    width: 17rem;
+    height: 25rem;
 }
 .propiedad .img{
     height: 150px;
